<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HigherLowerActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.079"
            android:id="@+id/textView" app:layout_constraintHorizontal_bias="0.515"/>
    <Button
            android:text="@string/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="36dp" android:layout_marginStart="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.053" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="52dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginRight="40dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.923"/>
    <Button
            android:text="@string/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button5"
            app:layout_constraintStart_toEndOf="@+id/button"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/button3" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.575"
            android:layout_marginBottom="52dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:src="@drawable/dice1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button5" app:layout_constraintVertical_bias="0.151"
            android:layout_marginEnd="84dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="84dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.974" android:contentDescription="@string/imageView2"
            android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button5" app:layout_constraintVertical_bias="0.01"
            app:layout_constraintHorizontal_bias="0.498"/>

</androidx.constraintlayout.widget.ConstraintLayout>